Blank rectangles in sculpt brush stroke #37812

Closed
opened 2013-12-14 00:59:03 +01:00 by Bob Smith · 10 comments

System Information
Operating system: Windows 7 64
graphics card: GTS 250

Blender Version
Broken: Blender 2.69 eba07b7
Worked: ?

Short description of error#
When making a sculpt brushstroke blank rectangles can appear

Starting plane:
starting_plane.JPG
weird effect:
error1.JPG
brush radius goes near plane edges:
error2.JPG

Exact steps for others to reproduce the error
In the attached blend file, just make a brush stroke with the currently set brush. The bigger the stroke, the worse the effect.
Blend.: textest.blend

**System Information** Operating system: Windows 7 64 graphics card: GTS 250 **Blender Version** Broken: Blender 2.69 eba07b7 Worked: ? **Short description of error**# When making a sculpt brushstroke blank rectangles can appear Starting plane: ![starting_plane.JPG](https://archive.blender.org/developer/F40213/starting_plane.JPG) weird effect: ![error1.JPG](https://archive.blender.org/developer/F40215/error1.JPG) brush radius goes near plane edges: ![error2.JPG](https://archive.blender.org/developer/F40217/error2.JPG) **Exact steps for others to reproduce the error** In the attached blend file, just make a brush stroke with the currently set brush. The bigger the stroke, the worse the effect. Blend.: [textest.blend](https://archive.blender.org/developer/F40220/textest.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @uvwxyz

Added subscriber: @uvwxyz

Added subscriber: @Geoffroykrantz

Added subscriber: @Geoffroykrantz
Antonis Ryakiotakis was assigned by Sergey Sharybin 2013-12-16 11:54:41 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Antony, do you feel like looking into this bug? :)

Antony, do you feel like looking into this bug? :)

Wow, interesting! I'm on it.

Wow, interesting! I'm on it.

This issue was referenced by blender/blender-addons-contrib@2d06ecf687

This issue was referenced by blender/blender-addons-contrib@2d06ecf687232608287a8f9303afd64ffec5fa1d

This issue was referenced by 2d06ecf687

This issue was referenced by 2d06ecf687232608287a8f9303afd64ffec5fa1d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2d06ecf687.

Closed by commit 2d06ecf687.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37812
No description provided.